Combined error data sources with main data sources Changed Formatter.percentEncode() param from `String` to `Charset` Minor code edits
Signed-off-by: dumbdemon <20498145+dumbdemon@users.noreply.github.com>